--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -1,56 +1,55 @@
 <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
-<table style="BACKGROUND-COLOR: rgb(242,242,243);" width="100%" border="0">
+<table style="BACKGROUND-COLOR: rgb(242,242,243)" border="0" width="100%">
   <tr style="HEIGHT: 80px">
-    <td><a href="{ImageLink1}" id="HeaderImageLink1"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" alt="{ImageLink1}" src="{hdLogoPath}" width="215" height="100"></a> </td> 
+    <td><a href="{ImageLink1}" id="HeaderImageLink1"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px" alt="{ImageLink1}" src="{hdLogoPath}" width="215" height="100"></a> </td> 
     <td width="40%"><input type="hidden" id="HeaderhdLogoPath" value="{hdLogoPath}" name="{hdLogoPath_Name}">
-      <div style="FONT-SIZE: 20px; FONT-WEIGHT: bold; COLOR: rgb(48,114,29); TEXT-ALIGN: center">
+      <div style="TEXT-ALIGN: center; COLOR: rgb(48,114,29); FONT-SIZE: 20px; FONT-WEIGHT: bold">
         Administración Central de Desarrollo<br>
         y Mantenimiento de Aplicaciones <br>
         <br>
         Soporte, Desarrollo y Mantenimiento de Aplicaciones – 4 
       </div>
  </td> 
-    <td style"text-align:right">
+    <td style?text-align:right?>
       <!-- BEGIN Panel pnlMenu -->
-      <table style="FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(218,224,228);text-align:right">
+      <table style="TEXT-ALIGN: right; BACKGROUND-COLOR: rgb(218,224,228); COLOR: rgb(0,122,173); FONT-WEIGHT: bold">
         <tr style="HEIGHT: 60px">
-          
-<!-- BEGIN Panel Panel3 -->
-<td>
-  <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkUniverso_Src}" id="HeaderpnlMenuPanel3lkUniverso" style="POSITION: relative; TOP: 20%">Universo de Medición</a> 
-  </div>
+          <!-- BEGIN Panel Panel3 -->
+          <td>
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkUniverso_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkUniverso">Universo de Medición</a> 
+            </div>
  </td> 
-<td>
-  <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkIncidentes_Src}" id="HeaderpnlMenuPanel3lkIncidentes" style="POSITION: relative; TOP: 20%">Incidentes</a> 
-  </div>
+          <td>
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkIncidentes_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkIncidentes">Incidentes</a> 
+            </div>
  </td> 
-<td>
-  <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkRequerimientos_Src}" id="HeaderpnlMenuPanel3lkRequerimientos" style="POSITION: relative; TOP: 20%">SLAs de Apertura</a> 
-  </div>
+          <td>
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkRequerimientos_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkRequerimientos">SLAs de Apertura</a> 
+            </div>
  </td> 
-<td>
-  <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{lkPPMCCierre_Src}" id="HeaderpnlMenuPanel3lkPPMCCierre" style="POSITION: relative; TOP: 20%">SLAs de Cierre</a> 
-  </div>
+          <td>
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{lkPPMCCierre_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkPPMCCierre">SLAs de Cierre</a> 
+            </div>
  </td> 
-<td>
-  <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-<a href="{Link2_Src}" id="HeaderpnlMenuPanel3Link2" style="POSITION: relative; TOP: 20%">Eficiencia<br>
-    Presupuestal</a> 
-  </div>
+          <td>
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+<a href="{Link2_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3Link2">Eficiencia<br>
+              Presupuestal</a> 
+            </div>
  </td> 
-<td>
-  <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-    <!-- BEGIN Link Link3 --><a href="{Link3_Src}" id="HeaderpnlMenuPanel3Link3" style="POSITION: relative; TOP: 20%">SLAs CAPC</a><!-- END Link Link3 -->
-  </div>
+          <td>
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+              <!-- BEGIN Link Link3 --><a href="{Link3_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3Link3">SLAs CAPC</a><!-- END Link Link3 -->
+            </div>
  </td> <!-- END Panel Panel3 -->
           <td>
             <!-- BEGIN Panel pnlMenuAdmin -->
-            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
-              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" id="HeaderpnlMenupnlMenuAdminlkAdmin" style="POSITION: relative; TOP: 20%">Admin</a><!-- END Link lkAdmin -->
+            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
+              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenupnlMenuAdminlkAdmin">Admin</a><!-- END Link lkAdmin -->
             </div>
  <!-- END Panel pnlMenuAdmin --></td> 
         </tr>
@@ -65,36 +64,56 @@
 <tr style="HEIGHT: 25px">
   <td colspan="2">
     <!-- BEGIN Panel Panel2 -->
-    <table>
-      <tr>
-        <td>
-          <div style="FONT-SIZE: 12px; HEIGHT: 20px; WIDTH: 100px; COLOR: #444444; MARGIN-LEFT: 7px; BACKGROUND-COLOR: #ffffff">
-<a href="{Link4_Src}" id="HeaderPanel2Link4">Tablero SLAs</a> 
-          </div>
- </td> 
-        <td>
-          <div style="FONT-SIZE: 12px; HEIGHT: 20px; WIDTH: 125px; COLOR: #444444; MARGIN-LEFT: 7px; BACKGROUND-COLOR: #ffffff">
-<a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y Mediciones</a> 
-          </div>
- </td> 
-      </tr>
+    <div style="MARGIN: 0px 10px; FLOAT: left">
+      <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td class="HeaderLeft"></td> 
+          <td class="th"><strong>&nbsp;<a href="{Link4_Src}" id="HeaderPanel2Link4">Tablero SLAs</a></strong>&nbsp;</td> 
+          <td class="HeaderRight"></td> 
+        </tr>
  
-    </table>
+      </table>
+ 
+    </div>
+ 
+    <div style="MARGIN: 0px 10px 0px 0px; FLOAT: left">
+      <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td class="HeaderLeft"></td> 
+          <td class="th"><strong>&nbsp;<a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y Mediciones</a></strong>&nbsp;</td> 
+          <td class="HeaderRight"></td> 
+        </tr>
+ 
+      </table>
+ 
+    </div>
+ 
+    <div>
+      <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td class="HeaderLeft"></td> 
+          <td class="th"><strong>&nbsp;<a href="{Link6_Src}" id="HeaderPanel2Link6" target="_blank">Reportes Sitio SAT</a>&nbsp;</strong></td> 
+          <td class="HeaderRight"></td> 
+        </tr>
+ 
+      </table>
+ 
+    </div>
  <!-- END Panel Panel2 --></td> 
   <td>
     <!-- BEGIN Panel Panel1 -->
-    <table style="BORDER-LEFT-WIDTH: 1px; BORDER-RIGHT-WIDTH: 1px; BORDER-BOTTOM-WIDTH: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 0px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px" width="437">
+    <table style="PADDING-BOTTOM: 0px; BORDER-RIGHT-WIDTH: 1px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 1px; PADDING-TOP: 0px" width="437">
       <tr style="HEIGHT: 24px">
         <td>
-          <!-- BEGIN ImageLink img_abre_pantalla --><a href="{img_abre_pantalla}" id="HeaderPanel1img_abre_pantalla"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" alt="{img_abre_pantalla}" src="images/abre_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green; font-weigth: bold">Ver pantalla completa</font></a> <!-- END ImageLink img_abre_pantalla --></td> 
-        <td style="FONT-SIZE: 10px; WIDTH: 30%; FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(222,222,213)">
-          <div style="HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 7px; BACKGROUND-COLOR: #ffffff">
+          <!-- BEGIN ImageLink img_abre_pantalla --><a href="{img_abre_pantalla}" id="HeaderPanel1img_abre_pantalla"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px" alt="{img_abre_pantalla}" src="images/abre_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green; font-weigth: bold">Ver pantalla completa</font></a> <!-- END ImageLink img_abre_pantalla --></td> 
+        <td style="BACKGROUND-COLOR: rgb(222,222,213); WIDTH: 30%; COLOR: rgb(0,122,173); FONT-SIZE: 10px; FONT-WEIGHT: bold">
+          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 7px">
             <img style="MARGIN-TOP: 5px" src="{imgUserPath}"></img>&nbsp;&nbsp;Usuario:&nbsp;<a href="{lSesion_Src}" id="HeaderPanel1lSesion">{lSesion}</a> 
           </div>
  </td> 
-        <td style="FONT-SIZE: 10px; WIDTH: 30%; FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(222,222,213)">
-          <div style="HEIGHT: 24px; MARGIN-LEFT: 0px; BACKGROUND-COLOR: #ffffff">
-            &nbsp;<img id="HeaderImage1" style="MARGIN-TOP: 5px" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> 
+        <td style="BACKGROUND-COLOR: rgb(222,222,213); WIDTH: 30%; COLOR: rgb(0,122,173); FONT-SIZE: 10px; FONT-WEIGHT: bold">
+          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; MARGIN-LEFT: 0px">
+            &nbsp;<img style="MARGIN-TOP: 5px" id="HeaderImage1" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> 
           </div>
  </td> 
       </tr>
