Ajustes al menu de panel2
Ajustes para que la opción de "Reportes Sitio SAT" , pueda verse en
todos los perfiles

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -88,18 +88,20 @@
  
     </div>
  
-    <div>
-      <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
-        <tr>
-          <td class="HeaderLeft"></td> 
-          <td class="th"><strong>&nbsp;<a href="{Link6_Src}" id="HeaderPanel2Link6" target="_blank">Reportes Sitio SAT</a>&nbsp;</strong></td> 
-          <td class="HeaderRight"></td> 
-        </tr>
+<!--    <div>
+      &nbsp; 
+    </div>-->
+ <!-- END Panel Panel2 -->
+    <!-- BEGIN Panel Panel4 --><!--&nbsp;--> 
+    <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td class="HeaderLeft"></td> 
+        <td class="th"><strong>&nbsp;<a href="{Link6_Src}" id="HeaderPanel2Link6" target="_blank">Reportes Sitio SAT</a>&nbsp;</strong></td> 
+        <td class="HeaderRight"></td> 
+      </tr>
  
-      </table>
- 
-    </div>
- <!-- END Panel Panel2 --></td> 
+    </table>
+ <!-- END Panel Panel4 --></td> 
   <td>
     <!-- BEGIN Panel Panel1 -->
     <table style="PADDING-BOTTOM: 0px; BORDER-RIGHT-WIDTH: 1px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 1px; PADDING-TOP: 0px" width="437">
@@ -107,7 +109,7 @@
         <td>
           <!-- BEGIN ImageLink img_abre_pantalla --><a href="{img_abre_pantalla}" id="HeaderPanel1img_abre_pantalla"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px" alt="{img_abre_pantalla}" src="images/abre_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green; font-weigth: bold">Ver pantalla completa</font></a> <!-- END ImageLink img_abre_pantalla --></td> 
         <td style="BACKGROUND-COLOR: rgb(222,222,213); WIDTH: 30%; COLOR: rgb(0,122,173); FONT-SIZE: 10px; FONT-WEIGHT: bold">
-          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 7px">
+          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 5px">
             <img style="MARGIN-TOP: 5px" src="{imgUserPath}"></img>&nbsp;&nbsp;Usuario:&nbsp;<a href="{lSesion_Src}" id="HeaderPanel1lSesion">{lSesion}</a> 
           </div>
  </td> 
