--- a/TableroSLAs/SLAsCAPCDetalle.html
+++ b/TableroSLAs/SLAsCAPCDetalle.html
@@ -217,7 +217,7 @@ jQuery(function ($) {
   <tr>
     <td>&nbsp;</td> 
     <td></td> 
-    <td>&nbsp;</td> 
+    <td>&nbsp;</td>
   </tr>
  
   <tr>
@@ -232,43 +232,53 @@ jQuery(function ($) {
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Detalle SLAs del CAPC</strong></td> 
-                  <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
+                  <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
- 
               </table>
  
               <table class="Record" cellspacing="0" cellpadding="0">
                 <!-- BEGIN Error -->
                 <tr id="ErrorBlock" class="Error">
-                  <td colspan="3">{Error}</td> 
+                  <td colspan="3">{Error}</td>
                 </tr>
- <!-- END Error -->
+                <!-- END Error -->
                 <tr class="Controls">
                   <td class="th"><label for="mc_calificacion_capcnumero">Requerimiento</label></td> 
                   <td><input type="text" id="mc_calificacion_capcnumero" maxlength="6" size="6" value="{numero}" name="{numero_Name}"></td> 
-                  <td><label for="mc_calificacion_capcSLO" style="display: inline;">SLO</label><input type="checkbox" name="{SLO_Name}" value="1" {SLO} id="mc_calificacion_capcSLO"></td> 
+                  <td><label for="mc_calificacion_capcSLO" style="display: inline;">SLO</label><input type="checkbox" id="mc_calificacion_capcSLO" value="1" name="{SLO_Name}" {SLO}></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">Id Estimación</td> 
                   <td><input type="text" id="mc_calificacion_capcIdEstimacion" maxlength="6" size="6" value="{IdEstimacion}" name="{IdEstimacion_Name}"></td> 
-                  <td>&nbsp;</td> 
+                  <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">Rubro</td> 
                   <td><input type="text" id="mc_calificacion_capcAgrupador" maxlength="75" size="50" value="{Agrupador}" name="{Agrupador_Name}"></td> 
-                  <td>&nbsp;</td> 
+                  <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_capcid_serviciocont">Servicio</label></td> 
+                  <td class="th"><label for="mc_calificacion_capcid_serviciocont">Servicio Contractual</label></td> 
                   <td>
                     <select onchange="OcultaSLAs()" id="mc_calificacion_capcid_serviciocont" name="{id_serviciocont_Name}">
-                      {id_serviciocont_Options} 
+                      {id_serviciocont_Options}
                     </select>
  </td> 
-                  <td>&nbsp;</td> 
+                  <td>&nbsp;</td>
+                </tr>
+ 
+                <tr class="Controls">
+                  <td class="th">&nbsp;Servicio de Negocio</td> 
+                  <td>
+                    <select id="mc_calificacion_capcListBox1" name="{ListBox1_Name}">
+                      <option selected value="">Seleccionar Valor</option>
+                      {ListBox1_Options}
+                    </select>
+ &nbsp;</td> 
+                  <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
@@ -276,15 +286,15 @@ jQuery(function ($) {
                   <td>
                     <select id="mc_calificacion_capcid_tipo" name="{id_tipo_Name}">
                       <option selected value="">Seleccionar Valor</option>
- {id_tipo_Options} 
+                      {id_tipo_Options}
                     </select>
  </td> 
-                  <td>&nbsp;</td> 
+                  <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_calificacion_capcDescripcion">Descripción</label></td> 
-                  <td colspan="2"><input type="text" id="mc_calificacion_capcDescripcion" maxlength="350" size="75" value="{Descripcion}" name="{Descripcion_Name}"></td> 
+                  <td colspan="2"><input type="text" id="mc_calificacion_capcDescripcion" maxlength="350" size="75" value="{Descripcion}" name="{Descripcion_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
@@ -292,10 +302,10 @@ jQuery(function ($) {
                   <td>
                     <select id="mc_calificacion_capcmes" name="{mes_Name}">
                       <option selected value="">Seleccionar Valor</option>
- {mes_Options} 
+                      {mes_Options}
                     </select>
  </td> 
-                  <td>&nbsp;</td> 
+                  <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
@@ -303,10 +313,10 @@ jQuery(function ($) {
                   <td>
                     <select id="mc_calificacion_capcanio" name="{anio_Name}">
                       <option selected value="">Seleccionar Valor</option>
- {anio_Options} 
+                      {anio_Options}
                     </select>
  </td> 
-                  <td>&nbsp;</td> 
+                  <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
@@ -320,9 +330,9 @@ jQuery(function ($) {
                           <td style="BACKGROUND-COLOR: rgb(216,216,216)">
                             <select id="mc_calificacion_capcCALIDAD_PROD_TERM" name="{CALIDAD_PROD_TERM_Name}">
                               <option selected value="">No Aplica</option>
- {CALIDAD_PROD_TERM_Options} 
+                              {CALIDAD_PROD_TERM_Options}
                             </select>
- </td> 
+ </td>
                         </tr>
  
                         <tr>
@@ -332,7 +342,7 @@ jQuery(function ($) {
                                 <td><label for="mc_calificacion_capctxtEntregableCalidad" style="display: inline;">Entregable:&nbsp;</label></td> 
                                 <td colspan="5"><textarea id="mc_calificacion_capctxtEntregableCalidad" rows="3" cols="50" name="{txtEntregableCalidad_Name}">{txtEntregableCalidad}</textarea></td> 
                                 <td>% Cumplimiento</td> 
-                                <td><input type="text" id="mc_calificacion_capcPctCalidad" size="5" value="{PctCalidad}" name="{PctCalidad_Name}"></td> 
+                                <td><input type="text" id="mc_calificacion_capcPctCalidad" size="5" value="{PctCalidad}" name="{PctCalidad_Name}"></td>
                               </tr>
  
                               <tr id="trRevColegas1">
@@ -343,7 +353,7 @@ jQuery(function ($) {
                                 <td>Severidad Media </td> 
                                 <td><input type="text" id="mc_calificacion_capcHallazgosMedia" maxlength="3" size="5" value="{HallazgosMedia}" name="{HallazgosMedia_Name}"></td> 
                                 <td>Severidad Alta</td> 
-                                <td><input type="text" onchange="CalculaDefectos()" id="mc_calificacion_capcHallazgosAlta" maxlength="3" size="5" value="{HallazgosAlta}" name="{HallazgosAlta_Name}"></td> 
+                                <td><input type="text" onchange="CalculaDefectos()" id="mc_calificacion_capcHallazgosAlta" maxlength="3" size="5" value="{HallazgosAlta}" name="{HallazgosAlta_Name}"></td>
                               </tr>
  
                               <tr id="trRevColegas2">
@@ -352,26 +362,23 @@ jQuery(function ($) {
                                   <div id="divTotHallazgos">
                                     xxx 
                                   </div>
- </td> 
+                                </td> 
                                 <td>Defectos</td> 
                                 <td><input type="text" id="mc_calificacion_capcDefectos" maxlength="3" size="5" value="{Defectos}" name="{Defectos_Name}"></td> 
                                 <td>Deductiva</td> 
-                                <td><input type="text" id="mc_calificacion_capcDeductiva" maxlength="15" size="5" value="{Deductiva}" name="{Deductiva_Name}"></td> 
+                                <td><input type="text" id="mc_calificacion_capcDeductiva" maxlength="15" size="5" value="{Deductiva}" name="{Deductiva_Name}"></td>
                               </tr>
  
                               <tr>
                                 <td><label for="mc_calificacion_capcDetalleCalidad" style="display: inline;">Detalle Medición Calidad</label></td> 
-                                <td colspan="7"><textarea id="mc_calificacion_capcDetalleCalidad" rows="3" cols="62" name="{DetalleCalidad_Name}">{DetalleCalidad}</textarea></td> 
+                                <td colspan="7"><textarea id="mc_calificacion_capcDetalleCalidad" rows="3" cols="62" name="{DetalleCalidad_Name}">{DetalleCalidad}</textarea></td>
                               </tr>
- 
                             </table>
- </td> 
+                          </td>
                         </tr>
- 
                       </table>
- 
                     </div>
- </td> 
+                  </td>
                 </tr>
  
                 <tr class="Controls">
@@ -383,15 +390,13 @@ jQuery(function ($) {
                           <td style="BACKGROUND-COLOR: rgb(216,216,216)">
                             <select id="mc_calificacion_capcDEDUC_OMISION" name="{DEDUC_OMISION_Name}">
                               <option selected value="">No Aplica</option>
- {DEDUC_OMISION_Options} 
+                              {DEDUC_OMISION_Options}
                             </select>
- </td> 
+ </td>
                         </tr>
- 
                       </table>
- 
                     </div>
- </td> 
+                  </td>
                 </tr>
  
                 <tr class="Controls">
@@ -403,9 +408,9 @@ jQuery(function ($) {
                           <td style="BACKGROUND-COLOR: rgb(216,216,216)">
                             <select id="mc_calificacion_capcEFIC_PRESUP" name="{EFIC_PRESUP_Name}">
                               <option selected value="">No Aplica</option>
- {EFIC_PRESUP_Options} 
+                              {EFIC_PRESUP_Options}
                             </select>
- </td> 
+ </td>
                         </tr>
  
                         <tr>
@@ -417,27 +422,24 @@ jQuery(function ($) {
                                 <td><input type="text" id="mc_calificacion_capcUnidadesActuales" maxlength="20" value="{UnidadesActuales}" name="{UnidadesActuales_Name}"></td> 
                                 <td><label for="mc_calificacion_capcUnidadesAnteriores" style="display: inline;">Costo Estimado y/o Total de<br>
                                   Unidades Optimizadas</label></td> 
-                                <td><input type="text" id="mc_calificacion_capcUnidadesAnteriores" maxlength="20" value="{UnidadesAnteriores}" name="{UnidadesAnteriores_Name}"></td> 
+                                <td><input type="text" id="mc_calificacion_capcUnidadesAnteriores" maxlength="20" value="{UnidadesAnteriores}" name="{UnidadesAnteriores_Name}"></td>
                               </tr>
  
                               <tr>
                                 <td><label for="mc_calificacion_capctxtEntregableEF" style="display: inline;">Entregable:</label>&nbsp;</td> 
-                                <td colspan="3"><textarea id="mc_calificacion_capctxtEntregableEF" cols="62" name="{txtEntregableEF_Name}">{txtEntregableEF}</textarea>&nbsp; </td> 
+                                <td colspan="3"><textarea id="mc_calificacion_capctxtEntregableEF" cols="62" name="{txtEntregableEF_Name}">{txtEntregableEF}</textarea>&nbsp; </td>
                               </tr>
  
                               <tr>
                                 <td><label for="mc_calificacion_capcDetalleEficPres" style="display: inline;">Detalle Medicion EF</label>&nbsp;</td> 
-                                <td colspan="3"><textarea id="mc_calificacion_capcDetalleEficPres" rows="3" cols="62" name="{DetalleEficPres_Name}">{DetalleEficPres}</textarea>&nbsp; </td> 
+                                <td colspan="3"><textarea id="mc_calificacion_capcDetalleEficPres" rows="3" cols="62" name="{DetalleEficPres_Name}">{DetalleEficPres}</textarea>&nbsp; </td>
                               </tr>
- 
                             </table>
- </td> 
+                          </td>
                         </tr>
- 
                       </table>
- 
                     </div>
- </td> 
+                  </td>
                 </tr>
  
                 <tr class="Controls">
@@ -449,7 +451,7 @@ jQuery(function ($) {
                           <td style="BACKGROUND-COLOR: rgb(216,216,216)">
                             <select id="mc_calificacion_capcRETR_ENTREGABLE" name="{RETR_ENTREGABLE_Name}">
                               <option selected value="">No Aplica</option>
- {RETR_ENTREGABLE_Options} 
+                              {RETR_ENTREGABLE_Options}
                             </select>
  </td> 
                           <tr class="Controls">
@@ -458,7 +460,7 @@ jQuery(function ($) {
                                 <tr>
                                   <td><label for="mc_calificacion_capcCAPFirmada" style="display: inline;">CAP Firmada</label><input type="checkbox" id="mc_calificacion_capcCAPFirmada" value="1" name="{CAPFirmada_Name}" {CAPFirmada}></td> 
                                   <td colspan="2"><label for="mc_calificacion_capcFechaFirmaCAES" style="display: inline;">Fecha Firma CAES</label></td> 
-                                  <td colspan="3"><input type="text" id="mc_calificacion_capcFechaFirmaCAES" value="{FechaFirmaCAES}" name="{FechaFirmaCAES_Name}"></td> 
+                                  <td colspan="3"><input type="text" id="mc_calificacion_capcFechaFirmaCAES" value="{FechaFirmaCAES}" name="{FechaFirmaCAES_Name}"></td>
                                 </tr>
  
                                 <tr class="Controls">
@@ -469,7 +471,7 @@ jQuery(function ($) {
                                   <td><label for="mc_calificacion_capcDiasRetrasoHabiles" style="display: inline;">Retraso Días Habiles</label></td> 
                                   <td><input type="text" onchange="CalculaRetraso()" id="mc_calificacion_capcDiasRetrasoHabiles" maxlength="5" size="5" value="{DiasRetrasoHabiles}" name="{DiasRetrasoHabiles_Name}"></td> 
                                   <td><label for="mc_calificacion_capcDiasRetrasoNaturales" style="display: inline;">Retraso Días Naturales </label></td> 
-                                  <td><input type="text" onchange="CalculaRetraso()" id="mc_calificacion_capcDiasRetrasoNaturales" maxlength="5" size="5" value="{DiasRetrasoNaturales}" name="{DiasRetrasoNaturales_Name}"></td> 
+                                  <td><input type="text" onchange="CalculaRetraso()" id="mc_calificacion_capcDiasRetrasoNaturales" maxlength="5" size="5" value="{DiasRetrasoNaturales}" name="{DiasRetrasoNaturales_Name}"></td>
                                 </tr>
  
                                 <tr class="Controls">
@@ -478,63 +480,53 @@ jQuery(function ($) {
                                   <td></td> 
                                   <td></td> 
                                   <td></td> 
-                                  <td></td> 
+                                  <td></td>
                                 </tr>
  
                                 <tr class="Controls">
                                   <td></td> 
-                                  <td></td> 
+                                  <td></td>
                                 </tr>
  
                                 <tr class="Controls">
                                   <td class="th">URL Entregables</td> 
-                                  <td colspan="7"><input type="text" id="mc_calificacion_capcURLEntregables" maxlength="725" size="83" value="{URLEntregables}" name="{URLEntregables_Name}"></td> 
+                                  <td colspan="7"><input type="text" id="mc_calificacion_capcURLEntregables" maxlength="725" size="83" value="{URLEntregables}" name="{URLEntregables_Name}"></td>
                                 </tr>
  
                                 <tr class="Controls">
                                   <td class="th"><label for="mc_calificacion_capcObservaciones">Observaciones</label></td> 
-                                  <td colspan="7"><textarea id="mc_calificacion_capcObservaciones" rows="3" cols="62" name="{Observaciones_Name}">{Observaciones}</textarea></td> 
+                                  <td colspan="7"><textarea id="mc_calificacion_capcObservaciones" rows="3" cols="62" name="{Observaciones_Name}">{Observaciones}</textarea></td>
                                 </tr>
- 
                               </table>
- </td> 
+                            </td>
                           </tr>
- 
                         </table>
- 
                       </div>
- </td> 
+                    </td>
                   </tr>
  
                   <tr class="Bottom">
                     <td style="TEXT-ALIGN: right" colspan="3">
                       <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_calificacion_capcButton_Insert" class="Button" alt="Agregar" value="Guardar" name="{Button_Name}"><!-- END Button Button_Insert -->
                       <!-- BEGIN Button Button_Update --><input type="submit" id="mc_calificacion_capcButton_Update" class="Button" alt="Enviar" value="Guardar" name="{Button_Name}"><!-- END Button Button_Update -->
-                      <!-- BEGIN Button Button_Delete --><input type="submit" id="mc_calificacion_capcButton_Delete" class="Button" alt="Borrar" value="Borrar" name="{Button_Name}"><!-- END Button Button_Delete --><input type="hidden" id="mc_calificacion_capcid_proveedor" value="{id_proveedor}" name="{id_proveedor_Name}"></td> 
+                      <!-- BEGIN Button Button_Delete --><input type="submit" id="mc_calificacion_capcButton_Delete" class="Button" alt="Borrar" value="Borrar" name="{Button_Name}"><!-- END Button Button_Delete --><input type="hidden" id="mc_calificacion_capcid_proveedor" value="{id_proveedor}" name="{id_proveedor_Name}"></td>
                   </tr>
- 
                 </table>
- </td> 
+              </td>
             </tr>
- 
           </table>
- 
         </form>
- <!-- END Record mc_calificacion_capc --><br>
+        <!-- END Record mc_calificacion_capc --><br>
       </td> 
-      <td>&nbsp;</td> 
+      <td>&nbsp;</td>
     </tr>
  
     <tr>
       <td>&nbsp;</td> 
       <td></td> 
-      <td>&nbsp;</td> 
+      <td>&nbsp;</td>
     </tr>
- 
   </table>
- 
   <p></p>
- 
   </body>
- 
   </html>
