Se agrega reporte de deducciones y penalizaciones para slo
Se agrega reporte de deducciones y penalizaciones para slo

--- a/TableroSLAs/TableroExcel.html
+++ b/TableroSLAs/TableroExcel.html
@@ -67,6 +67,16 @@ jQuery(function ($) {
   <tr>
     <td></td> 
     <td>
+      <div style="FLOAT: right">
+        {MenuTablero} 
+      </div>
+    </td>
+  </tr>
+</table>
+<table width="100%">
+  <tr>
+    <td></td> 
+    <td>
       <p><br>
       </p>
       <!-- BEGIN Record mc_reporte_ns1 -->
@@ -102,17 +112,15 @@ jQuery(function ($) {
                       {s_id_proveedor_Options}
                     </select>
  </td> 
-                  <td class="th"><label for="mc_reporte_ns1s_MesReporte">Mes Reporte</label></td> 
+                  <td class="th"><label for="mc_reporte_ns1s_MesReporte">Mes</label></td> 
                   <td>
                     <select id="mc_reporte_ns1s_MesReporte" name="{s_MesReporte_Name}">
-                      <option selected value="">Seleccionar Valor</option>
                       {s_MesReporte_Options}
                     </select>
  </td> 
-                  <td class="th"><label for="mc_reporte_ns1s_AnioReporte">Anio Reporte</label></td> 
+                  <td class="th"><label for="mc_reporte_ns1s_AnioReporte">Año</label></td> 
                   <td>
                     <select id="mc_reporte_ns1s_AnioReporte" name="{s_AnioReporte_Name}">
-                      <option selected value="">Seleccionar Valor</option>
                       {s_AnioReporte_Options}
                     </select>
  </td> 
